# requestrocket

./: README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml
src/: ApiDoc.ts  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: APIFlowDesigner.svelte  APIFlowDesignerStyles.css  AdvancedDataTable.svelte  ConfirmModal.svelte  CurlImportDialog.svelte  CustomHeaderModule.ts  CustomHeaderPanel.svelte  DataDialog.svelte  DiffViewer.svelte  HarAnalyzerModal.svelte  HttpBodyDropdown.svelte  HttpMethodDropdown.svelte  ImportPopupMenu.svelte  JSONEditor.svelte  MenuPanel.svelte  ResponseHeadersTable.svelte  SettingsModal.svelte  SplashScreen.svelte  StatusBar.svelte  ThemeSwitcher.svelte  TitleBar.svelte  api-types.ts  flow-types.ts  har-types.ts  jsoneditor.d.ts
src/lib/: curlImporter.ts  harImporter.ts  requestModule.ts  resizablePanel.ts  securityScan.ts  themes.ts
src/routes/: +page.svelte
src/stores/: autoCompleteStore.ts  layoutStore.ts  modalStatesStore.ts  paramsStore.ts  urlStore.ts
src/types/: flow-types.ts  har-types.ts
