[package]
name = "app"
version = "0.3.0"
description = "request rocket"
authors = ["murat genç"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "window-maximize", "window-start-dragging", "window-hide", "window-minimize", "window-show", "window-close", "window-unminimize", "window-unmaximize", "http-all", "dialog-all", "fs-all"] }
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
